force-app/main/default/objects/Schedule_Entry__c/Schedule_Entry__c.object-meta.xml
<CustomObject>
    <description>Opportunity Management (Custom) : A schedule entry represents a single month&apos;s delivery and revenue schedule for an Opportunity</description>
    <label>Schedule Entry</label>
    <nameField>
        <displayFormat>SE-{0}</displayFormat>
        <label>Schedule Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>