force-app/main/default/objects/Schedule_Entry__c/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <description>Used only by Schedule Entries for Tegra Auto and other types of Opportunities that allow the ASP to change from month to month or quarter to quarter</description>
    <label>ASP</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>