force-app/main/default/objects/Schedule_Entry__c/fields/ASP_Override__c.field-meta.xml
<CustomField>
    <fullName>ASP_Override__c</fullName>
    <description>ASP Override price. Only the Admins (by permission set) can edit it. The Revenue will be calculated based on this price.</description>
    <label>ASP Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>