force-app/main/default/objects/Schedule_Entry__c/fields/Display_Date__c.field-meta.xml
<CustomField>
    <fullName>Display_Date__c</fullName>
    <description>Creates a short form (MMM YYYY) of Schedule Date</description>
    <formula>Case(MONTH(Schedule_Date__c),
            1, &quot;Jan &quot; + Text(YEAR(Schedule_Date__c)),
            2, &quot;Feb &quot; + Text(YEAR(Schedule_Date__c)),
            3, &quot;Mar &quot; + Text(YEAR(Schedule_Date__c)),
            4, &quot;Apr &quot; + Text(YEAR(Schedule_Date__c)),
            5, &quot;May &quot; + Text(YEAR(Schedule_Date__c)),
            6, &quot;Jun &quot; + Text(YEAR(Schedule_Date__c)),
            7, &quot;Jul &quot; + Text(YEAR(Schedule_Date__c)),
            8, &quot;Aug &quot; + Text(YEAR(Schedule_Date__c)),
            9, &quot;Sep &quot; + Text(YEAR(Schedule_Date__c)),
            10, &quot;Oct &quot; + Text(YEAR(Schedule_Date__c)),
            11, &quot;Nov &quot; + Text(YEAR(Schedule_Date__c)),
            12, &quot;Dec &quot; + Text(YEAR(Schedule_Date__c)),
            &quot;&quot;)</formula>
    <label>Date</label>
    <type>Text</type>
</CustomField>