force-app/main/default/objects/Schedule_Entry__c/fields/Display_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Display_Quarter__c</fullName>
    <description>Fiscal Quarter</description>
    <label>Quarter (unsorted)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>