force-app/main/default/objects/Schedule_Entry__c/fields/Display_Quarter_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Display_Quarter_Sortable__c</fullName>
    <formula>IF(Display_Quarter__c=&apos;&apos;, &apos;&apos;, &quot;FY&quot; &amp; RIGHT(Display_Quarter__c, 4) &amp; &apos;-&apos; &amp; LEFT(Display_Quarter__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>