force-app/main/default/objects/Schedule_Entry__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF(Display_Quarter__c=&apos;&apos;, &apos;&apos;, &quot;FY&quot; &amp; RIGHT(Display_Quarter__c, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>