force-app/main/default/objects/Schedule_Entry__c/fields/OLI_Id__c.field-meta.xml
<CustomField>
    <fullName>OLI_Id__c</fullName>
    <description>Opportunity Line Item Id for the associated Opportunity Line Item/Product</description>
    <label>OLI Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>