force-app/main/default/objects/Schedule_Entry__c/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used by the Batch class for Auto Cloning of Opportunity, Opportunity Line Item, Schedule Entry.</description>
    <label>Original</label>
    <type>Checkbox</type>
</CustomField>