force-app/main/default/objects/Schedule_Entry__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product: Name, written to the Schedule Entry via APEX</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>