force-app/main/default/objects/Schedule_Entry__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity / # of units associated to a particular Schedule Entry</description>
    <label>Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>