force-app/main/default/objects/Schedule_Entry__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Revenue associated to a particular Schedule Entry</description>
    <label>Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>