force-app/main/default/objects/Schedule_Entry__c/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <description>Start of the month associated to the particular Schedule Entry</description>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>