force-app/main/default/objects/Schedule_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Revenue__c</columns>
    <columns>Schedule_Date__c</columns>
    <columns>Display_Date__c</columns>
    <columns>Display_Quarter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>